# qcom-batt-guard

./: Cargo.toml  README.md  install.sh  qcom-batt-guard.service  uninstall.sh  upload.ps1
src/: main.rs
systemd/: qcom-batt-guard.service
